;; Test of the Bigarray module of the standard library

(test
 (name stm_tests)
 (modules stm_tests)
 (package multicoretests)
 (libraries qcheck-stm.sequential qcheck-stm.domain)
 (preprocess (pps ppx_deriving.show))
 ; (action (run runner %{dep:stm_tests.exe}))
 (action (echo "Skipping src/bigarray/%{test} from the test suite\n\n"))
)

(test
 (name lin_tests_dsl)
 (modules lin_tests_dsl)
 (package multicoretests)
 (libraries qcheck-lin.domain)
 (action (run runner %{dep:lin_tests_dsl.exe}))
)
