;; Test of the Bigarray module of the standard library

(test
 (name stm_tests)
 (modules stm_tests)
 (package multicoretests)
 (libraries qcheck-stm.sequential qcheck-stm.domain)
 ; (action (run %{test} --verbose))
 (action (echo "Skipping src/bigarray/%{test} from the test suite\n\n"))
)

(test
 (name lin_tests)
 (modules lin_tests)
 (package multicoretests)
 (libraries qcheck-lin.domain)
 (action (run %{test} --verbose))
)
