;; Tests of the stdlib Bytes library

;; this prevents the tests from running on a default build

(alias
 (name default)
 (package multicoretests)
 (deps stm_tests.exe lin_tests_dsl.exe))

;; Linearization tests

(test
 (name stm_tests)
 (modules stm_tests)
 (package multicoretests)
 (libraries qcheck-stm.sequential qcheck-stm.domain)
 (preprocess (pps ppx_deriving.show))
 (action (run %{test} --verbose))
)

(test
 (name lin_tests_dsl)
 (modules lin_tests_dsl)
 (package multicoretests)
 (libraries qcheck-lin.domain qcheck-lin.thread)
 (action (run %{test} --verbose))
)
