;; Tests of the stdlib Bytes library

(test
 (name stm_tests)
 (modules stm_tests)
 (package multicoretests)
 (libraries bytescp qcheck-stm.sequential qcheck-stm.domain)
 (preprocess (pps ppx_deriving.show))
 (action (run %{test} --verbose))
)

(test
 (name lin_tests_dsl)
 (modules lin_tests_dsl)
 (package multicoretests)
 (libraries bytescp qcheck-lin.domain qcheck-lin.thread)
 (action (run %{test} --verbose))
)

(rule
 (target bytescp.ml)
 (action (copy %{ocaml-config:standard_library}/bytes.ml %{target}))
)

(library
 (name bytescp)
 (modules bytescp)
 (flags (:standard -w -9))
 (instrumentation (backend bisect_ppx))
)
