;; Tests of the stdlib Bytes library

(test
 (name stm_tests)
 (modules stm_tests)
 (package multicoretests)
 (libraries qcheck-stm.sequential qcheck-stm.domain)
 (action (run %{test} --verbose))
)

(test
 (name lin_tests)
 (modules lin_tests)
 (package multicoretests)
 (libraries qcheck-lin.domain qcheck-lin.thread)
 (action (run %{test} --verbose))
)
