;; Tests of the stdlib Domain library

;; Tests of Domain's spawn functionality (non-STM)

(test
 (name domain_joingraph)
 (modules domain_joingraph)
 (package multicoretests)
 (libraries util qcheck-core qcheck-core.runner)
 (preprocess (pps ppx_deriving.show))
 (action (run runner %{dep:domain_joingraph.exe}))
)

(test
 (name domain_spawntree)
 (modules domain_spawntree)
 (package multicoretests)
 (libraries util qcheck-core qcheck-core.runner)
 (preprocess (pps ppx_deriving.show))
 (action (run runner %{dep:domain_spawntree.exe}))
)
