;; Tests of the stdlib Domain library

;; Tests of Domain's spawn functionality (non-STM)

(test
 (name domain_joingraph)
 (modules domain_joingraph)
 (package multicoretests)
 (libraries util qcheck-core qcheck-core.runner)
 (action (run %{test} --verbose))
)

(test
 (name domain_spawntree)
 (modules domain_spawntree)
 (package multicoretests)
 (libraries util qcheck-core qcheck-core.runner)
 (action (run %{test} --verbose))
)

(test
 (name lin_tests_dls)
 (modules lin_tests_dls)
 (package multicoretests)
 (libraries qcheck-lin.domain)
 ; (action (run %{test} --verbose))
 (action (progn))
)

(test
 (name stm_tests_dls)
 (modules stm_tests_dls)
 (package multicoretests)
 (libraries qcheck-stm.sequential qcheck-stm.domain)
 (action (run %{test} --verbose))
)
