;; tests of Domainslib

;; this prevents the tests from running on a default build
(alias
 (name default)
 (package multicoretests)
 (deps
   chan_stm_tests.exe
   task_one_dep.exe
   task_more_deps.exe
   task_parallel.exe))

;; tests of Domainslib.Task's async functionality (non-STM)

(executable
 (public_name task_one_dep)
 (package multicoretests)
 (modules task_one_dep)
 (libraries util qcheck-core qcheck-core.runner domainslib)
 (preprocess (pps ppx_deriving.show)))

(rule
 (alias runtest)
 (package multicoretests)
 (deps task_one_dep.exe)
 (action (run ./%{deps} --verbose)))

(executable
 (public_name task_more_deps)
 (package multicoretests)
 (modules task_more_deps)
 (libraries util qcheck-core qcheck-core.runner domainslib)
 (preprocess (pps ppx_deriving.show)))

(rule
 (alias runtest)
 (package multicoretests)
 (deps task_more_deps.exe)
 (action (run ./%{deps} --verbose)))

(executable
 (public_name task_parallel)
 (package multicoretests)
 (modules task_parallel)
 (libraries util qcheck-core qcheck-core.runner domainslib))

(rule
 (alias runtest)
 (package multicoretests)
 (deps task_parallel.exe)
 (action (run ./%{deps} --verbose)))


;; STM_seq and STM_domain test of Domainslib.Chan

(executable
 (public_name chan_stm_tests)
 (package multicoretests)
 (modules chan_stm_tests)
 (libraries qcheck-stm.sequential qcheck-stm.domain domainslib)
 (preprocess (pps ppx_deriving.show)))

(rule
 (alias runtest)
 (package multicoretests)
 (deps chan_stm_tests.exe)
 (action (run ./%{deps} --verbose)))
