;; tests of Domainslib

;; this prevents the tests from running on a default build
(alias
 (name default)
 (package multicoretests)
 (deps
   task_one_dep.exe
   task_more_deps.exe
   task_parallel.exe
   chan_stm_tests.exe)
)

;; tests of Domainslib.Task's async functionality (non-STM)

(test
 (name task_one_dep)
 (modules task_one_dep)
 (package multicoretests)
 (libraries util qcheck-core qcheck-core.runner domainslib)
 (preprocess (pps ppx_deriving.show))
 (action (run %{test} --verbose))
)

(test
 (name task_more_deps)
 (modules task_more_deps)
 (package multicoretests)
 (libraries util qcheck-core qcheck-core.runner domainslib)
 (preprocess (pps ppx_deriving.show))
 (action (run %{test} --verbose))
)

(test
 (name task_parallel)
 (modules task_parallel)
 (package multicoretests)
 (libraries util qcheck-core qcheck-core.runner domainslib)
 (action (run %{test} --verbose))
)

;; STM_seq and STM_domain test of Domainslib.Chan

(test
 (name chan_stm_tests)
 (modules chan_stm_tests)
 (package multicoretests)
 (libraries qcheck-stm.sequential qcheck-stm.domain domainslib)
 (preprocess (pps ppx_deriving.show))
 (action (run %{test} --verbose))
)
