;; Tests of the Dynarray library - added in 5.2

(test
 (name lin_tests)
 (modules lin_tests)
 (package multicoretests)
 (libraries qcheck-lin.domain)
 (action (run %{test} --verbose))
 (enabled_if (>= %{ocaml_version} 5.2))
)

(test
 (name stm_tests)
 (modules stm_tests)
 (package multicoretests)
 (libraries qcheck-stm.sequential qcheck-stm.domain)
 (action (run %{test} --verbose))
 (enabled_if (>= %{ocaml_version} 5.2))
)
