(* -*- tuareg -*- *)

(* We generate an appropriate dune stanza to avoid Dynarray tests build failures
   on 5.0 and 5.1 with the opam-less CI GitHub action setup *)

let at_least_52 = Sys.(ocaml_release.major,ocaml_release.minor) >= (5,2)

let dune =
  if at_least_52
  then Printf.sprintf {|
(test
 (name lin_tests)
 (modules lin_tests)
 (package multicoretests)
 (libraries qcheck-lin.domain)
 (action (run %%{test} --verbose))
)

(test
 (name stm_tests)
 (modules stm_tests)
 (package multicoretests)
 (libraries qcheck-stm.sequential qcheck-stm.domain)
 (action (run %%{test} --verbose))
)
|}
  else
    Printf.sprintf {|
(rule
 (alias runtest)
 (package multicoretests)
 (action (echo "Dynarray tests disabled as Dynarray is not available\n")))
|}

let () = Jbuild_plugin.V1.send dune
