;; Linearization tests of the stdlib Ephemeron module

(test
 (name stm_tests)
 (modules stm_tests)
 (package multicoretests)
 (libraries qcheck-stm.sequential qcheck-stm.domain)
 (preprocess (pps ppx_deriving.show))
 (action (run runner %{dep:stm_tests.exe}))
)

(test
 (name lin_tests_dsl)
 (modules lin_tests_dsl)
 (package multicoretests)
 (libraries qcheck-lin.domain qcheck-lin.thread)
 (action (run runner %{dep:lin_tests_dsl.exe}))
)
