;; Linearization tests of the stdlib Ephemeron module

(test
 (name stm_tests_seq)
 (modules stm_tests_spec stm_tests_seq)
 (package multicoretests)
 (libraries qcheck-stm.sequential)
 (action (run %{test} --verbose))
)

(test
 (name stm_tests_par)
 (modules stm_tests_spec stm_tests_par)
 (package multicoretests)
 (libraries qcheck-stm.domain)
 (action (run %{test} --verbose))
)

(test
 (name lin_tests)
 (modules lin_tests)
 (package multicoretests)
 (libraries qcheck-lin.domain)
 (action (run %{test} --verbose))
)
