;; Test of the floatarray library

(test
 (name stm_tests)
 (modules stm_tests)
 (package multicoretests)
 (libraries float qcheck-stm.sequential qcheck-stm.domain)
 (preprocess (pps ppx_deriving.show))
 (action (run %{test} --verbose))
)

(test
 (name lin_tests_dsl)
 (modules lin_tests_dsl)
 (package multicoretests)
 (libraries float qcheck-lin.domain)
 (action (run %{test} --verbose))
)

(rule
 (target float.ml)
 (action (copy %{ocaml-config:standard_library}/%{target} %{target}))
)

(library
 (name float)
 (modules float)
 (flags (:standard -w -9))
 (instrumentation (backend bisect_ppx))
)
