;; Linearizability tests of the stdlib Hashtbl library

;; this prevents the tests from running on a default build
(alias
 (name default)
 (package multicoretests)
 (deps
   stm_tests.exe
   lin_tests.exe
   lin_tests_dsl.exe))

(env
 (_
  (binaries
   (../check_error_count.exe as check_error_count))))


(executable
 (name stm_tests)
 (modules stm_tests)
 (libraries qcheck STM)
 (preprocess (pps ppx_deriving_qcheck ppx_deriving.show)))

; (rule
;  (alias runtest)
;  (package multicoretests)
;  (deps stm_tests.exe)
;  (action
;   (progn
;    (bash "(./stm_tests.exe --no-colors --verbose || echo 'test run triggered an error') | tee stm-output.txt")
;    (run %{bin:check_error_count} "hashtbl/stm_tests" 2 stm-output.txt))))


(executable
 (name lin_tests)
 (modules lin_tests)
 (flags (:standard -w -27))
 (libraries qcheck lin)
 (preprocess (pps ppx_deriving_qcheck ppx_deriving.show ppx_deriving.eq)))

(rule
 (alias runtest)
 (package multicoretests)
 (deps lin_tests.exe)
 (action
  (progn
   (bash "(./lin_tests.exe --no-colors --verbose || echo 'test run triggered an error') | tee lin-output.txt")
   (run %{bin:check_error_count} "hashtbl/lin_tests" 1 lin-output.txt))))


(executable
 (name lin_tests_dsl)
 (modules lin_tests_dsl)
 ;(package multicoretests)
 (libraries multicorecheck.lin))

(rule
 (alias runtest)
 (package multicoretests)
 (deps lin_tests_dsl.exe)
 (action
  (progn
   (bash "(./lin_tests_dsl.exe --no-colors --verbose || echo 'test run triggered an error') | tee lin-dsl-output.txt")
   (run %{bin:check_error_count} "hashtbl/lin_tests_dsl" 1 lin-dsl-output.txt))))
