;; Linearization tests of the stdlib Hashtbl library

(test
 (name stm_tests)
 (modules stm_tests)
 (package multicoretests)
 (libraries qcheck-stm.sequential qcheck-stm.domain)
 (action (run %{test} --verbose))
)

(test
 (name lin_internal_tests)
 (modules lin_internal_tests)
 (package multicoretests)
 (flags (:standard -w -27))
 (libraries qcheck-lin.domain)
 ; (action (run %{test} --verbose))
 (action (echo "Skipping src/hashtbl/%{test} from the test suite\n\n"))
)

(test
 (name lin_tests_dsl)
 (modules lin_tests_dsl)
 (package multicoretests)
 (libraries qcheck-lin.domain)
 (action (run %{test} --verbose))
)
