;; Linearizability tests of the I/O operations

(test
 (name lin_tests)
 (modules lin_tests)
 (package multicoretests)
 ;(flags (:standard -w -27))
 (libraries qcheck-lin.domain)
 (action (run %{test} --verbose))
)

(test
 (name lin_tests_dsl)
 (modules lin_tests_dsl)
 (package multicoretests)
 ;(flags (:standard -w -27))
 (libraries qcheck-lin.domain)
 (action (run %{test} --verbose))
)
