;; Internal tests

;; this prevents the tests from running on a default build
(alias
 (name default)
 (package multicoretests)
 (deps cleanup.exe util_print_test.exe))

(test
 (name util_print_test)
 (modules util_print_test)
 (package multicoretests)
 (libraries qcheck-multicoretests-util))


(test
 (name cleanup)
 (modules cleanup)
 (package multicoretests)
 (libraries qcheck-lin.domain)
 (preprocess (pps ppx_deriving.show ppx_deriving.eq))
 (action (run ./%{test} --verbose)))
