;; Internal tests

;; this prevents the tests from running on a default build
(alias
 (name default)
 (package multicoretests)
 (deps cleanup.exe util_print_test.exe mutable_set_v5.exe))

(test
 (name util_print_test)
 (package multicoretests)
 (modules util_print_test)
 (libraries qcheck-multicoretests-util))


(test
 (name cleanup)
 (package multicoretests)
 (modules cleanup)
 (libraries qcheck-lin.domain)
 (preprocess (pps ppx_deriving.show ppx_deriving.eq))
 (action (run ./%{test} --verbose)))


(test
 (name mutable_set_v5)
 (package multicoretests)
 (modules mutable_set_v5)
 (libraries qcheck-stm.sequential)
 (preprocess (pps ppx_deriving.show))
 (action
  (with-accepted-exit-codes 1 (run ./%{test} --verbose --seed 229109553))))
