;; Internal tests

(test
 (name util_print_test)
 (modules util_print_test)
 (package multicoretests)
 (libraries qcheck-multicoretests-util))


(test
 (name cleanup)
 (modules cleanup)
 (package multicoretests)
 (libraries qcheck-lin.domain)
 (preprocess (pps ppx_deriving.show ppx_deriving.eq))
 (action (run ./%{test} --verbose)))


(test
 (name mutable_set_v5)
 (modules mutable_set_v5)
 (package multicoretests)
 (libraries qcheck-stm.sequential)
 (preprocess (pps ppx_deriving.show))
 (action
  (with-accepted-exit-codes 1 (run ./%{test} --verbose --seed 229109553))))
