;; Linearizability tests of the I/O operations

(test
 (name lin_tests)
 (modules lin_tests)
 (package multicoretests)
 ;(flags (:standard -w -27))
 (libraries qcheck-lin.domain)
 ; (action (run runner %{dep:lin_tests.exe}))
 (action (echo "Skipping src/io/%{test} from the test suite\n\n"))
)

(library
 (name lin_tests_dsl_common_io)
 (modules lin_tests_dsl_common)
 (package multicoretests)
 (libraries qcheck-lin.lin)
)

(test
 (name lin_tests_dsl_domain)
 (modules lin_tests_dsl_domain)
 (package multicoretests)
 ;(flags (:standard -w -27))
 (libraries qcheck-lin.domain lin_tests_dsl_common_io)
 (action (run runner %{dep:lin_tests_dsl_domain.exe}))
)

(test
 (name lin_tests_dsl_thread)
 (modules lin_tests_dsl_thread)
 (package multicoretests)
 ;(flags (:standard -w -27))
 (libraries qcheck-lin.thread lin_tests_dsl_common_io)
 ; (action (run runner %{dep:lin_tests_dsl_thread.exe}))
 (action (echo "Skipping src/io/%{test} from the test suite\n\n"))
)
