;; Linearizability tests of the I/O operations

(test
 (name lin_internal_tests)
 (modules lin_internal_tests)
 (package multicoretests)
 ;(flags (:standard -w -27))
 (libraries qcheck-lin.domain)
 ; (action (run %{test} --verbose))
 (action (progn))
)

(library
 (name lin_tests_spec_io)
 (modules lin_tests_spec_io)
 (package multicoretests)
 (libraries qcheck-lin.lin)
)

(test
 (name lin_tests_domain)
 (modules lin_tests_domain)
 (package multicoretests)
 ;(flags (:standard -w -27))
 (libraries qcheck-lin.domain lin_tests_spec_io)
 (action (run %{test} --verbose))
)

(test
 (name lin_tests_thread)
 (modules lin_tests_thread)
 (package multicoretests)
 ;(flags (:standard -w -27))
 (libraries qcheck-lin.thread lin_tests_spec_io)
 ; (action (run %{test} --verbose))
 (action (progn))
)

(test
 (name stm_tests)
 (modules stm_tests)
 (package multicoretests)
 (libraries qcheck-stm.sequential qcheck-stm.domain)
 (action (run %{test} --verbose))
)
