;; Linearizability tests of the kcas library

;; this prevents the tests from running on a default build
(alias
 (name default)
 (package multicoretests)
 (deps lin_tests.exe lin_tests_dsl.exe))

(executable
 (name lin_tests)
 (modules lin_tests)
 (flags (:standard -w -27))
 (libraries lin kcas)
 (preprocess (pps ppx_deriving.show ppx_deriving.eq)))

; disable kcas test for now
; (rule
;  (alias runtest)
;  (package multicoretests)
;  (deps lin_tests.exe)
;  (action (run ./%{deps} --verbose)))

(executable
 (name lin_tests_dsl)
 (modules lin_tests_dsl)
 (libraries lin kcas)
 (preprocess (pps ppx_deriving.show ppx_deriving.eq)))

; (rule
;  (alias runtest)
;  (package multicoretests)
;  (deps lin_tests_dsl.exe)
;  (action (run ./%{deps} --verbose)))
